Fixed overflow problem

--- a/src/components/algorithm/Algorithm.css
+++ b/src/components/algorithm/Algorithm.css
@@ -12,15 +12,21 @@
 
 #card-content {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
 	align-items: center;
+}
+
+.CardHeader {
+	display: inherit;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 #favorite-icon {
 	padding: 0;
 }
 
-#cardHeader {
+#card-title {
 	font-size: 1.3em;
 	font-weight: bold;
 	color: #ffffff;
