--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,14 +1,8 @@
 .Dashboard {
-	height: 100%;
+	/* height: 100%; */
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-}
-
-#card {
-	width: 350px;
-	height: 250px;
-	background-color: #262d4a;
-	border-radius: 15px;
-	margin-bottom: 10px;
+	align-content: baseline;
+	overflow: overlay;
 }
